--- a/index.html
+++ b/index.html
@@ -1,100 +1,4 @@
-<!doctype html>
-<html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
-        <title>Jose Marin</title>
-        <meta name="description" content="Jose Marin is a web Engineer slowly conquering the entire web stack, feel free to contact him for business inquiries.">
-        <link href="assets/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="importantMessage">You are using an out of date browser. It  may not display this or other websites correctly.<br>You should upgrade or use an <a href="https://www.google.com/chrome/browser/" target="_blank">alternative browser</a>.</p>
-        <![endif]-->
-        <canvas id="canvas" style="z-index:-1;"></canvas>
-        <main class="container">
-            <div class="bio">
-                <section class="bio__container">
-                    <div class="bio__avatar">
-                        <img class="avatar" src="assets/0.jpg" alt="Wizard" />
-                    </div>
-                    <div class="bio__name">
-                        <h1 class="name">Jos&#233;<br>Marin</h1>
-                    </div>
-                </section>
-                <div class="bio__contact">
-                    <ul class="bio__contact__methods">
-                        <li class="bio__contact__methods__item">Email</li>
-                        <li class="bio__contact__methods__item">Web</li>
-                        <li class="bio__contact__methods__item">Address</li>
-                    </ul>
-                    <ul class="bio__contact__info">
-                        <li class="bio__contact__info__item">josemarindev@gmail.com</li>
-                        <li class="bio__contact__info__item">josemar.in</li>
-                        <li class="bio__contact__info__item">Brooklyn, NY</li>
-                    </ul>
-                </div>
-                <div class="bio__education">
-                    <strong>New York Code + Design Academy &bull; 2017</strong><br>
-                    <span><i>Full Stack Web Development<br> Field Of Study Software Engineering</i></span>
-                </div>
-                <div id="social__btns">
-                    <a href="https://www.linkedin.com/in/joseamarin/" class="btn btn-icon btn-linkedin"><i class="fa fa-linkedin"></i><span>Linkedin</span></a>
-                    <a href="https://github.com/joseamarin" class="btn btn-icon btn-github"><i class="fa fa-github"></i><span>GitHub</span></a>
-                </div>
-            </div>
-            <div class="resume">
-                <section class="job">
-                    <div class="job__info">
-                        <h2 class="xp">XP</h2>
-                        <h2 class="company">Zeta Global</h2>
-                        <p class="location">New York, NY</p>
-                        <p class="date">2017 - Present</p>
-                    </div>
-                    <div class="job__duties">
-                        <h2 class="title">Email Coding Specialist</h2>
-                        <ul class="job__duties__list">
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                            <li>Photoshop</li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="stats">
-                    <div class="stats__container">
-                        <h2>STATS</h2>
-                        <ul class="stats__bar">
-                            <li class="stats__bar__percentage">HTML5</li>
-                            <li class="stats__bar__percentage">CSS3</li>
-                            <li class="stats__bar__percentage">JavaScript</li>
-                            <li class="stats__bar__percentage">Node.js</li>
-                            <li class="stats__bar__percentage">React</li>
-                            <li class="stats__bar__percentage">SQL</li>
-                            <li class="stats__bar__percentage"><strong>Desire to learn</strong></li>
-                        </ul>
-                    </div>
-                    <div class="projects">
-                        <h2>QUEST LOG</h2>
-                        <i>Vim.md <span>&#10003;</span></i><br>
-                        <small>July 2018</small>
-                        <ul class="projects__list">
-                            <li>Basic CodeMirror enabled markdown editor</li>
-                            <li>vi key bindings</li>
-                            <li>Local storage support</li>
-                            <li><a href="https://joseamarin.github.io/vim.MD/" target="_blank">vim.md</a></li>
-                        </ul>
-                    </div>
-                </section>
-            </div>
-        </main>
-        <div id="js-clock" class="clock"></div>
-        <script>
-            clock();
+<!doctype html><html lang=en-US><meta charset=utf-8><meta content="IE=Edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet><link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono"rel=stylesheet><link href=css/main.css rel=stylesheet><title>Jose Marin</title><meta content="Jose Marin is a web Engineer slowly conquering the entire web stack, feel free to contact him for business inquiries."name=description><link href=assets/favicon.ico rel="shortcut icon"type=image/x-icon><body><!--[if lt IE 8]><p class=importantMessage>You are using an out of date browser. It may not display this or other websites correctly.<br>You should upgrade or use an <a href=https://www.google.com/chrome/browser/ target=_blank>alternative browser</a>.<![endif]--><canvas id=canvas style=z-index:-1></canvas><main class=container><div class=bio><section class=bio__container><div class=bio__avatar><img alt=Wizard class=avatar src=assets/0.jpg></div><div class=bio__name><h1 class=name>José<br>Marin</h1></div></section><div class=bio__contact><ul class=bio__contact__methods><li class=bio__contact__methods__item>Email<li class=bio__contact__methods__item>Web<li class=bio__contact__methods__item>Address</ul><ul class=bio__contact__info><li class=bio__contact__info__item>josemarindev@gmail.com<li class=bio__contact__info__item>josemar.in<li class=bio__contact__info__item>Brooklyn, NY</ul></div><div class=bio__education><strong>New York Code + Design Academy • 2017</strong><br><span><i>Full Stack Web Development<br>Field Of Study Software Engineering</i></span></div><div id=social__btns><a href=https://www.linkedin.com/in/joseamarin/ class="btn btn-icon btn-linkedin"><i class="fa fa-linkedin"></i><span>Linkedin</span></a> <a href=https://github.com/joseamarin class="btn btn-icon btn-github"><i class="fa fa-github"></i><span>GitHub</span></a></div></div><div class=resume><section class=job><div class=job__info><h2 class=xp>XP</h2><h2 class=company>Zeta Global</h2><p class=location>New York, NY<p class=date>2017 - Present</div><div class=job__duties><h2 class=title>Email Coding Specialist</h2><ul class=job__duties__list><li>HTML<li>CSS<li>JavaScript<li>Photoshop</ul></div></section><section class=stats><div class=stats__container><h2>STATS</h2><ul class=stats__bar><li class=stats__bar__percentage>HTML5<li class=stats__bar__percentage>CSS3<li class=stats__bar__percentage>JavaScript<li class=stats__bar__percentage>Node.js<li class=stats__bar__percentage>React<li class=stats__bar__percentage>SQL<li class=stats__bar__percentage><strong>Desire to learn</strong></ul></div><div class=projects><h2>QUEST LOG</h2><i>Vim.md <span>✓</span></i><br><small>July 2018</small><ul class=projects__list><li>Basic CodeMirror enabled markdown editor<li>vi key bindings<li>Local storage support<li><a href=https://joseamarin.github.io/vim.MD/ target=_blank>vim.md</a></ul></div></section></div></main><div class=clock id=js-clock></div><script>clock();
             function clock() {
                 var d = new Date();
                 var twentyFourHour = d.getHours();
@@ -134,8 +38,4 @@ console.log(`%c ________________________________________
          \\  (oo)\\_______
             (__)\\       )\\/\\
                 ||----w |
-                ||     ||`, "font-family:monospace");
-        </script>
-        <script src="js/stars.js"></script>
-    </body>
-</html>
+                ||     ||`, "font-family:monospace");</script><script src=js/stars.js></script></body></html>
