--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
               <li class="stats__bar__percentage">CSS3</li>
               <li class="stats__bar__percentage">JavaScript</li>
               <li class="stats__bar__percentage">Node.js</li>
+              <li class="stats__bar__percentage">Bash</li>
               <li class="stats__bar__percentage">React</li>
               <li class="stats__bar__percentage">SQL</li>
               <li class="stats__bar__percentage"><strong>Desire to learn</strong></li>
